<resources>
    <string name="app_name">Customerside</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="donefordialog">Done</string>
    <string name="cancelfordialog">Cancel</string>
    <string name="typeoforder">typeoforder</string>
    <string-array name="daysselected">
        <item name="monday">Monday</item>
        <item name="tuesday">tuesday</item>
        <item name="wednesday">Wednesday</item>
        <item name="thursday">Thursday</item>
        <item name="friday">Friday</item>
    </string-array>
    <string-array name="typesofboxex">
        <item name="nutribox">Nutri Box</item>
    </string-array>
    <string name="order">Order</string>
    <string name="callus">Call US</string>
    <string name="aboutus">About us</string>
    <string name="whoweare"><b><i>We are bunch of techies working towards improving the livelihood of street hakwers</i></b></string>
    <string name="feedback">Feedback and Complaints</string>
    <string name="manageorders">Manage Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
