<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homefragment"
    android:orientation="vertical"
    android:weightSum="3"
    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:weightSum="2"
     android:background="#d3d3d3"

     >
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
         android:weightSum="3"
         android:gravity="center"
         android:layout_margin="20dp"
         android:padding="10dp"
         android:background="#fafafa"
         android:id="@+id/order"
         >
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:src="@drawable/orderfruitbox"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:text="@string/order"
             android:gravity="center"
             android:textSize="20sp"
             android:textStyle="bold|italic"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:weightSum="3"
         android:orientation="vertical"
         android:gravity="center"
         android:layout_margin="20dp"
         android:background="#fafafa"
         android:padding="10dp"
         android:id="@+id/stepcounter">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:src="@drawable/stepcounter"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:text="Step Counter"
             android:gravity="center"
             android:textSize="20sp"
             android:textStyle="bold|italic"/>


     </LinearLayout>

 </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="#d3d3d3"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="#fafafa"
            android:id="@+id/feedback"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/feedback"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/feedback"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="#fafafa"
            android:id="@+id/contactus">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/callus"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:background="#d3d3d3"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="#fafafa"
            android:id="@+id/aboutus">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/aboutus"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/aboutus"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="3"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="#fafafa"
            android:id="@+id/manageorders">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ourproducts"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/manageorders"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>
        </LinearLayout>

    </LinearLayout>





</LinearLayout>